tests/baselines/reference/noImplicitAnyFunctions.errors.txt
tests/cases/compiler/noImplicitAnyFunctions.ts(1,18): error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
tests/cases/compiler/noImplicitAnyFunctions.ts(5,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyFunctions.ts(16,10): error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.
tests/cases/compiler/noImplicitAnyFunctions.ts(18,10): error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.
tests/cases/compiler/noImplicitAnyFunctions.ts(18,24): error TS7006: Parameter 'y' implicitly has an 'any' type.


==== tests/cases/compiler/noImplicitAnyFunctions.ts (5 errors) ====
    declare function f1();
                     ~~
!!! error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
    
    declare function f2(): any;
    
    function f3(x) {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    
    function f4(x: any) {
        return x;
    }
    
    function f5(x: any): any {
        return x;
    }
    
    function f6(x: string, y: number);
             ~~
!!! error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.
    function f6(x: string, y: string): any;
    function f6(x: string, y) {
             ~~
!!! error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.
                           ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
        return null;
    }